# voxelius

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  imgui.ini  imgui_log.txt
client/: CMakeLists.txt  atlas.cc  atlas.hh  background.cc  background.hh  bitmap_font.cc  bitmap_font.hh  camera.cc  camera.hh  canvas.cc  canvas.hh  canvas_font.cc  canvas_font.hh  canvas_text.cc  canvas_text.hh  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_quad_vertex.hh  chunk_render.cc  chunk_render.hh  chunk_renderer.cc  chunk_vbo.hh  chunk_vis.cc  chunk_vis.hh  chunk_visibility.cc  chunk_visibility.hh  client.cc  debug.cc  debug.hh  debug_draw.cc  debug_draw.hh  debug_keys.cc  debug_keys.hh  debug_overlay.cc  debug_overlay.hh  debug_screen.cc  debug_screen.hh  debug_session.cc  debug_session.hh  (+164 more)
client/canvas/: canvas.cc  canvas.hh  font.cc  font.hh  text.cc  text.hh
client/debug/: debug_draw.cc  debug_draw.hh  debug_screen.cc  debug_screen.hh  debug_session.cc  debug_session.hh  debug_toggles.cc  debug_toggles.hh
client/entity/: chunk_mesh.hh  chunk_visible.hh  player_look.cc  player_look.hh  player_move.cc  player_move.hh  voxel_mesh.hh
client/event/: cursor_move.hh  cursor_pos.hh  framebuffer_size.hh  glfw_cursor_pos.hh  glfw_framebuffer_size.hh  glfw_key.hh  glfw_mouse_button.hh  glfw_scroll.hh  imgui_fonts_reload.hh  key.hh  keyboard_key.hh  lang_set.hh  language_set.hh  mouse_button.hh  mouse_move.hh  mouse_scroll.hh  scroll.hh  window_resize.hh
client/gameui/: background.cc  background.hh  language.cc  language.hh  main_menu.cc  main_menu.hh  progress.cc  progress.hh  screen.hh  server_list.cc  server_list.hh  settings.cc  settings.hh
client/gl/: buffer.hh  framebuffer.hh  program.hh  renderbuffer.hh  sampler.hh  shader.hh  texture.hh  vertexarray.hh
client/glxx/: buffer.hh  drawcmd.hh  framebuffer.hh  fwd.hh  object.hh  pixel_format.hh  program.hh  program_pipeline.hh  renderbuffer.hh  sampler.hh  shader.hh  texture.hh  vertex_array.hh  vertexarray.hh
client/gui/: background.cc  background.hh  bitmap_font.cc  bitmap_font.hh  canvas.cc  canvas.hh  font.hh  language.cc  language.hh  main_menu.cc  main_menu.hh  progress.cc  progress.hh  rect_renderer.hh  screen.hh  server_list.cc  server_list.hh  settings.cc  settings.hh  text_attribute.hh  text_builder.cc  text_builder.hh  text_mode.hh  text_quad.hh  text_quad_vertex.hh  text_renderer.cc  text_renderer.hh  text_vbo.cc  text_vbo.hh  widget.hh
client/input/: keyboard.cc  keyboard.hh  keynames.cc  keynames.hh  mouse.cc  mouse.hh
client/player/: player_look.cc  player_look.hh  player_move.cc  player_move.hh
client/render/: canvas.cc  canvas.hh  deferred_pass.cc  deferred_pass.hh  final_pass.cc  final_pass.hh  font.cc  font.hh  gbuffer.cc  gbuffer.hh  mesh.hh  pixel_format.hh  shaders.cc  shaders.hh  text.cc  text.hh  view.cc  view.hh  voxel_anims.cc  voxel_anims.hh  voxel_atlas.cc  voxel_atlas.hh  voxel_mesher.cc  voxel_mesher.hh  voxel_renderer.cc  voxel_renderer.hh  voxel_vertex.cc  voxel_vertex.hh
client/ui/: button.hh  canvas.cc  canvas.hh  canvas_font.cc  canvas_font.hh  canvas_text.cc  canvas_text.hh  font.cc  font.hh  gameui_screen.hh  imgui.cc  imgui.hh  label.cc  label.hh  main_menu.cc  main_menu.hh  rect.cc  rect.hh  screen.hh
client/util/: keyname.cc  keyname.hh  program.cc  program.hh  shader.cc  shader.hh  shadertools.cc  shadertools.hh
client/world/: chunk_mesh.hh  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_quad_vertex.hh  chunk_renderer.cc  chunk_renderer.hh  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  outline_renderer.cc  outline_renderer.hh  player_target.cc  player_target.hh  quad_vertex.hh  voxel_anims.cc  voxel_anims.hh  voxel_atlas.cc  voxel_atlas.hh
common/: CMakeLists.txt  cmdline.cc  cmdline.hh  config.cc  config.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  fstools.cc  fstools.hh  image.cc  image.hh  message.cc  message.hh  packet_buffer.cc  packet_buffer.hh  strtools.cc  strtools.hh
core/: CMakeLists.txt  cmdline.cc  cmdline.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  types.hh  util.hh  vfs.cc  vfs.hh
game/: CMakeLists.txt  game.cc
game/client/: CMakeLists.txt  background.cc  background.hh  chat.cc  chat.hh  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_renderer.hh  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  client.cc  crosshair.cc  crosshair.hh  cubedraw.cc  cubedraw.hh  debug_screen.cc  debug_screen.hh  debug_session.cc  debug_session.hh  debug_toggles.cc  debug_toggles.hh  debug_window.cc  debug_window.hh  game.cc  game.hh  globals.cc  globals.hh  gui_screen.hh  input.cc  input.hh  keyboard.cc  keyboard.hh  keynames.cc  keynames.hh  language.cc  language.hh  linedraw.cc  (+48 more)
game/server/: CMakeLists.txt  chat.cc  chat.hh  game.cc  game.hh  globals.cc  globals.hh  main.cc  main.hh  receive.cc  receive.hh  send.cc  send.hh  sessions.cc  sessions.hh  status.cc  status.hh
game/shared/: CMakeLists.txt  chunk.cc  chunk.hh  (+44 more)
launch/: CMakeLists.txt  launch.cc
main/: CMakeLists.txt  main.cc
mathlib/: CMakeLists.txt  common.hh  constexpr.hh  floathacks.hh  mat4x4base.hh  mat4x4f.cc  mat4x4f.hh  vec2base.hh  vec2f.cc  vec2f.hh  vec3angles.cc  vec3angles.hh  vec3base.hh  vec3f.cc  vec3f.hh  vec4base.hh  vec4f.cc  vec4f.hh
server/: CMakeLists.txt  game.cc  game.hh  globals.cc  globals.hh  main.cc  main.hh  network.cc  network.hh  receive.cc  receive.hh  recv.cc  recv.hh  send.cc  send.hh  server.cc  server.hh  session.cc  session.hh  sessions.cc  sessions.hh  status.cc  status.hh
shared/: CMakeLists.txt  aabb.cc  aabb.hh  angle.hh  angle3D.cc  angle3D.hh  chunk.cc  chunk.hh  chunk_pos.cc  chunk_pos.hh  chunks.cc  chunks.hh  cmake.hh  cmake.hh.in  cmdline.cc  cmdline.hh  color.hh  config.cc  config.hh  const.hh  constexpr.hh  coord.cc  coord.hh  crc64.cc  crc64.hh  cxmath.hh  epoch.cc  epoch.hh  filetools.cc  filetools.hh  floatfix.cc  floatfix.hh  fstools.cc  fstools.hh  game_voxels.cc  game_voxels.hh  gamestate.hh  globals.cc  globals.hh  head.hh  (+70 more)
(+263 files in other folders)
