if(BUILD_CLIENT)
    add_executable(vgame "${CMAKE_CURRENT_LIST_DIR}/launch.cc")
    target_compile_definitions(vgame PUBLIC VGAME_CLIENT)
    target_include_directories(vgame PUBLIC ${CMAKE_SOURCE_DIR})
    target_link_libraries(vgame PUBLIC client shared)
endif()

if(BUILD_SERVER)
    add_executable(vds "${CMAKE_CURRENT_LIST_DIR}/launch.cc")
    target_compile_definitions(vds PUBLIC VGAME_SERVER)
    target_include_directories(vds PUBLIC ${CMAKE_SOURCE_DIR})
    target_link_libraries(vds PUBLIC server shared)    
endif()
